# openclaw-desktop

./: .gitignore  README-zh.md  README.md  README.md.tmp  SPEC.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
docs/: 垂直行业方案.md  开发者文档.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: basic.spec.ts
