[package]
name = "openclaw-desktop"
version = "1.0.0"
description = "OpenClaw Desktop App"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "5"
dirs = "5"
